force-app/main/default/objects/SMS_ExternalPayments__c/SMS_ExternalPayments__c.object-meta.xml
<CustomObject>
    <label>SMS_ExternalPayments</label>
    <nameField>
        <label>SMS_ExternalPayments Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SMS_ExternalPayments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>