force-app/main/default/objects/SMS_ExternalPayments__c/fields/CheckDate__c.field-meta.xml
<CustomField>
    <fullName>CheckDate__c</fullName>
    <label>CheckDate</label>
    <type>Date</type>
</CustomField>