force-app/main/default/objects/SMS_ExternalPayments__c/fields/CheckNumber__c.field-meta.xml
<CustomField>
    <fullName>CheckNumber__c</fullName>
    <label>CheckNumber</label>
    <length>50</length>
    <type>Text</type>
</CustomField>