force-app/main/default/objects/SMS_ExternalPayments__c/fields/IsVirtual__c.field-meta.xml
<CustomField>
    <fullName>IsVirtual__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsVirtual</label>
    <type>Checkbox</type>
</CustomField>